# notionbook

./: .gitignore  Makefile  pyproject.toml
notionbooks/: __init__.py  __main__.py
notionbooks/notion_to_jupyter/: __init__.py  block_utils.py
