[tool.poetry]
name = "notionbooks"
version = "0.1.0"
description = "Turn your notion database into Jupyter Notebooks"
authors = ["Antonio Feregrino <antonio.feregrino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
notion-client = "^2.0.0"
requests = "^2.28.2"
python-slugify = "^8.0.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
